2025-10-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option, in preferences, to change the local currency

2025-10-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix replace expression with result when result text is formatted (e.g. exponent)
	* Fix input of result text in expression when local digit grouping with comma or dot as separator is active and ignore comma/dot is not
	* Always clear result after Enter in RPN mode regardless of expression after calculation setting

2025-10-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Customizable digit group size and separator

2025-10-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix warnings when updating completion with preferences dialog not opened
	* Include prefix in character count for completion of prefix + unit with minimum completion length > 1
	* Fix minimum completion length for text string with Unicode characters
	* Increase responsivenes by decreasing the length of sleep periods (from 10 to 1 ms) while waiting

2025-10-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix wrong equals (not approximately) sign potentially shown in units and variables dialogs

2025-10-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not input plural names of units

2025-09-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Replace "MeV/c^2" and "MeV*c^(-2)" with "MeV/c²" in titles

2025-09-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve handling of hidden units (e.g. kph and cc) in completion and conversion menu
	* Avoid slow display of extreme numbers (> 2^10000000) with calculate-as-you-type

2025-09-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show warning and ask for confirmation when deactivating interval arithmetic
	* (Re)activate interval arithmetic in qalc (if configuration from prevision version)

2025-09-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix title matching for word preceded by parenthesis