@@ -50,6 +50,20 @@
  </provides>
  <translation type="gettext">qalculate-gtk</translation>
  <releases>
+  <release version="5.8.1" date="2025-10-27">
+   <description>
+    <p>Changes:</p>
+     <ul>
+      <li>Option to change the default currency</li>
+      <li>Customizable digit group size and separator</li>
+      <li>Improve interpretation of function expressions with x, y, or z in object names (e.g. "x year"), or within quotation marks</li>
+      <li>Ellipsize long titles in completion list</li>
+      <li>Fix replace expression with result</li>
+      <li>Fix opening of menu in menubar when completion list is visible</li>
+      <li>Minor bug fixes and feature enhancements</li>
+     </ul>
+   </description>
+  </release>
   <release version="5.8.0" date="2025-10-13">
    <description>
     <p>Changes:</p>
