@@ -1,6 +1,15 @@
+2025-10-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix opening of menu in menubar when completion list is visible, in Wayland
+
+2025-10-23 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Ellipsize long titles in completion list
+
 2025-10-21 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add option, in preferences, to change the local currency
+	* Improve interpretation of function expressions with x, y, and/or z in object names (e.g. "x year"), and/or within quotation marks (e.g. "x*code('x')")
 
 2025-10-20 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
